[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Nodes/Widget/CharacterSelectScreen.gd" type="Script" id=3]

[node name="CharacterSelectScreen" type="CanvasLayer"]
layer = 6
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control/HBoxContainer"]
self_modulate = Color( 0.301961, 0.65098, 1, 0.521569 )
margin_right = 638.0
margin_bottom = 1080.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 0.124
margin_bottom = -0.920013
text = "Chacter Stats"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 642.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 1278.0
margin_bottom = 97.0
theme_type_variation = "Header"
text = "Choose Character"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 1278.0
margin_bottom = 876.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="CharacterCardHolder" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_left = 639.0
margin_right = 639.0
margin_bottom = 775.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 880.0
margin_right = 1278.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 200 )

[node name="StartButton" type="Button" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 218.0
margin_top = 50.0
margin_right = 418.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Confirm"

[node name="ExitButton" type="Button" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 859.0
margin_top = 50.0
margin_right = 1059.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Exit"
